after fixing white space issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ body {
     background-color: black;
     color: #fff;
     position: relative;
+    overflow: hidden;
     &::before {
         width: 100%;
         height: 880px;
